infra/k8s/ingress/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: grafana
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.hiamt9a.io.vn
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
