infra/k8s/ingress/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: test.com
    - http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-clusterip-srv
                port:
                  number: 1000
          - path: /socket.io/
            pathType: ImplementationSpecific
            backend:
              service:
                name: socket-server-clusterip-srv
                port:
                  number: 1005
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-app-chat-serv
                port:
                  number: 3000
